--- a/ArcitechForApp/Base.lproj/Main.storyboard
+++ b/ArcitechForApp/Base.lproj/Main.storyboard
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gG9-t8-32B">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gG9-t8-32B">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -225,6 +226,129 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tS9-ya-Idw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2747" y="115"/>
+        </scene>
+        <!--CartViewController-->
+        <scene sceneID="d1P-DY-nJB">
+            <objects>
+                <viewController storyboardIdentifier="CartViewController" title="CartViewController" id="ukN-6B-zqI" customClass="CartViewController" customModule="ArcitechForApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bnY-YM-N6v">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5WF-IS-dXm" userLabel="ViewHeader">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="57"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hgV-Xf-LYi">
+                                <rect key="frame" x="0.0" y="57" width="320" height="511"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CartTableViewCell" rowHeight="210" id="3dU-A6-vGz" customClass="CartTableViewCell" customModule="ArcitechForApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="210"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3dU-A6-vGz" id="lcX-iS-3gN">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="210"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Zqg-9A-Xey">
+                                                    <rect key="frame" x="0.0" y="0.0" width="320" height="210"/>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ivG-7f-waH">
+                                                        <size key="itemSize" width="50" height="50"/>
+                                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                    </collectionViewFlowLayout>
+                                                    <cells>
+                                                        <collectionViewCell clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CartCollectionViewCell" id="hP5-pz-2NV" customClass="CartCollectionViewCell" customModule="ArcitechForApp" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="6.5" width="191" height="197"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="WTZ-eb-heB">
+                                                                <rect key="frame" x="0.0" y="0.0" width="191" height="197"/>
+                                                                <autoresizingMask key="autoresizingMask"/>
+                                                                <subviews>
+                                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Zc5-Yk-kvp">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="191" height="100"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="height" constant="100" id="enN-PR-neo"/>
+                                                                        </constraints>
+                                                                    </imageView>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AAu-FD-RmU">
+                                                                        <rect key="frame" x="20" y="120" width="151" height="20"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="height" constant="20" id="Z89-lw-nV6"/>
+                                                                        </constraints>
+                                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                        <nil key="textColor"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3aV-Yd-eav">
+                                                                        <rect key="frame" x="20" y="161" width="151" height="21"/>
+                                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                        <nil key="textColor"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                </subviews>
+                                                                <constraints>
+                                                                    <constraint firstItem="3aV-Yd-eav" firstAttribute="top" secondItem="AAu-FD-RmU" secondAttribute="bottom" constant="21" id="0dv-YP-IN4"/>
+                                                                    <constraint firstItem="AAu-FD-RmU" firstAttribute="leading" secondItem="WTZ-eb-heB" secondAttribute="leading" constant="20" id="16m-fd-J4N"/>
+                                                                    <constraint firstAttribute="trailing" secondItem="AAu-FD-RmU" secondAttribute="trailing" constant="20" id="3lo-0r-JDu"/>
+                                                                    <constraint firstItem="AAu-FD-RmU" firstAttribute="top" secondItem="Zc5-Yk-kvp" secondAttribute="bottom" constant="20" id="Di4-gf-d28"/>
+                                                                    <constraint firstItem="3aV-Yd-eav" firstAttribute="trailing" secondItem="AAu-FD-RmU" secondAttribute="trailing" id="Pzf-7S-Wwd"/>
+                                                                    <constraint firstAttribute="trailing" secondItem="Zc5-Yk-kvp" secondAttribute="trailing" id="Vgu-0I-gwZ"/>
+                                                                    <constraint firstItem="3aV-Yd-eav" firstAttribute="leading" secondItem="AAu-FD-RmU" secondAttribute="leading" id="cij-Px-gSI"/>
+                                                                    <constraint firstItem="Zc5-Yk-kvp" firstAttribute="leading" secondItem="WTZ-eb-heB" secondAttribute="leading" id="pm8-my-EEq"/>
+                                                                    <constraint firstItem="Zc5-Yk-kvp" firstAttribute="top" secondItem="WTZ-eb-heB" secondAttribute="top" id="pzK-Ml-okv"/>
+                                                                    <constraint firstItem="3aV-Yd-eav" firstAttribute="height" secondItem="AAu-FD-RmU" secondAttribute="height" multiplier="1.05" id="t7j-Td-Peh"/>
+                                                                </constraints>
+                                                            </collectionViewCellContentView>
+                                                            <size key="customSize" width="191" height="197"/>
+                                                            <connections>
+                                                                <outlet property="imgView" destination="Zc5-Yk-kvp" id="sEZ-k2-OZl"/>
+                                                                <outlet property="lblData" destination="AAu-FD-RmU" id="65b-4c-oB8"/>
+                                                                <outlet property="lblNewData" destination="3aV-Yd-eav" id="eZw-Rv-UAS"/>
+                                                            </connections>
+                                                        </collectionViewCell>
+                                                    </cells>
+                                                </collectionView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Zqg-9A-Xey" firstAttribute="top" secondItem="lcX-iS-3gN" secondAttribute="top" id="Aai-nX-CTk"/>
+                                                <constraint firstAttribute="bottom" secondItem="Zqg-9A-Xey" secondAttribute="bottom" id="Bth-dt-aOq"/>
+                                                <constraint firstItem="Zqg-9A-Xey" firstAttribute="leading" secondItem="lcX-iS-3gN" secondAttribute="leading" id="U97-Sm-vms"/>
+                                                <constraint firstAttribute="trailing" secondItem="Zqg-9A-Xey" secondAttribute="trailing" id="w2C-SK-K2w"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="collectionView" destination="Zqg-9A-Xey" id="GsL-2K-8nj"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="5WF-IS-dXm" firstAttribute="trailing" secondItem="RjH-ab-MfP" secondAttribute="trailing" id="3uP-Xk-fMI"/>
+                            <constraint firstItem="5WF-IS-dXm" firstAttribute="top" secondItem="RjH-ab-MfP" secondAttribute="top" id="9w4-uK-o5n"/>
+                            <constraint firstItem="5WF-IS-dXm" firstAttribute="top" secondItem="RjH-ab-MfP" secondAttribute="top" id="Il6-Iy-lCu"/>
+                            <constraint firstItem="5WF-IS-dXm" firstAttribute="leading" secondItem="RjH-ab-MfP" secondAttribute="leading" id="JzC-vF-PjL"/>
+                            <constraint firstItem="5WF-IS-dXm" firstAttribute="leading" secondItem="RjH-ab-MfP" secondAttribute="leading" id="bfm-cU-BID"/>
+                            <constraint firstItem="5WF-IS-dXm" firstAttribute="trailing" secondItem="RjH-ab-MfP" secondAttribute="trailing" id="chH-yn-IL4"/>
+                            <constraint firstItem="hgV-Xf-LYi" firstAttribute="trailing" secondItem="RjH-ab-MfP" secondAttribute="trailing" id="hI7-UE-gsj"/>
+                            <constraint firstItem="hgV-Xf-LYi" firstAttribute="top" secondItem="5WF-IS-dXm" secondAttribute="bottom" id="n0D-w3-OIP"/>
+                            <constraint firstItem="hgV-Xf-LYi" firstAttribute="leading" secondItem="RjH-ab-MfP" secondAttribute="leading" id="oCz-sR-U9C"/>
+                            <constraint firstItem="RjH-ab-MfP" firstAttribute="bottom" secondItem="hgV-Xf-LYi" secondAttribute="bottom" id="ozT-Fj-l1r"/>
+                            <constraint firstItem="5WF-IS-dXm" firstAttribute="height" secondItem="bnY-YM-N6v" secondAttribute="height" multiplier="0.1" id="z3Q-1p-o6C"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="RjH-ab-MfP"/>
+                    </view>
+                    <connections>
+                        <outlet property="tblDisplay" destination="hgV-Xf-LYi" id="Jui-vK-9qK"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hKT-O7-vhq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3671.25" y="114.08450704225352"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="1Cn-La-SIo">
